--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "prettier": "^1.17.0",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
     "sw-precache-webpack-plugin": "^0.11.5",
